syntax = "proto3";

package service;

service Hashira {
    rpc Create(CommandCreate) returns (ResultCreate) {}
    rpc Update(CommandUpdate) returns (ResultUpdate) {}
    rpc Delete(CommandDelete) returns (ResultDelete) {}
    rpc Retrieve(CommandRetrieve) returns (ResultRetrieve) {}
    rpc UpdatePriority(CommandUpdatePriority) returns (ResultUpdatePriority) {}
    rpc RetrievePriority(CommandRetrievePriority) returns (ResultRetrievePriority) {}
}

enum Place {
    BACKLOG = 0;
    TODO    = 1;
    DOING   = 2;
    DONE    = 3;
}

message Task {
    string id        = 1;
    string name      = 2;
    Place  place     = 3;
    bool   isDeleted = 4;
}

message Priority {
    Place place         = 1;
    repeated string ids = 2;
}

message CommandCreate {
    Task task = 1;
}

message CommandUpdate {
    Task task = 1;
}

message CommandDelete {
    string id = 1;
}

message CommandRetrieve {
}

message CommandUpdatePriority {
    repeated Priority priorities = 1;
}

message CommandRetrievePriority {
}

message ResultCreate {
    Task task = 1;
}

message ResultUpdate {
    Task task = 1;
}

message ResultDelete {
    Task task = 1;
}

message ResultRetrieve {
    repeated Task tasks = 1;
}

message ResultUpdatePriority {
    repeated Priority priorities = 1;
}

message ResultRetrievePriority {
    repeated Priority priorities = 1;
}
